# phtree-c

./: README.md  generate.sh  hypercube.md  meson.build  phtree32_1d.h  phtree32_2d.h  phtree64_3d.c
example/: main.c
examples/: demo_1d.c  demo_2d_simple.c  demo_2d_spatial_hash.c  demo_3d6d.c
source/: main.c  phtree.c  phtree.h  phtree32_1d.c  phtree32_2d.c  phtree32_3d.c  phtree64_1d.c  phtree64_2d.c  phtree64_3d.h  print.c  print.h  reference_to_key_functions.c
source/16bit/: phtree16_1d.c  phtree16_1d.h  phtree16_2d.c  phtree16_2d.h  phtree16_3d.c  phtree16_3d.h  phtree16_4d.c  phtree16_4d.h  phtree16_5d.c  phtree16_5d.h  phtree16_6d.c  phtree16_6d.h  phtree16_common.c  phtree16_common.h
source/32bit/: phtree32_1d.c  phtree32_1d.h  phtree32_2d.c  phtree32_2d.h  phtree32_3d.c  phtree32_3d.h  phtree32_4d.c  phtree32_4d.h  phtree32_5d.c  phtree32_5d.h  phtree32_6d.c  phtree32_6d.h  phtree32_common.c  phtree32_common.h  phtree_1d.c  phtree_2d.c  phtree_3d.c  phtree_3d.h
source/64bit/: phtree64_1d.c  phtree64_1d.h  phtree64_2d.c  phtree64_2d.h  phtree64_3d.c  phtree64_3d.h  phtree64_4d.c  phtree64_4d.h  phtree64_5d.c  phtree64_5d.h  phtree64_6d.c  phtree64_6d.h  phtree64_common.c  phtree64_common.h  phtree_1d.c  phtree_1d.h  phtree_2d.c  phtree_2d.h  phtree_3d.c
source/8bit/: phtree8_1d.c  phtree8_1d.h  phtree8_2d.c  phtree8_2d.h  phtree8_3d.c  phtree8_3d.h  phtree8_4d.c  phtree8_4d.h  phtree8_5d.c  phtree8_5d.h  phtree8_6d.c  (+3 more)
templates/: dim6_hash.json  mustache_hash_32_1d.json  mustache_hash_32_2d.json  mustache_hash_32_3d.json  mustache_hash_64_1d.json  mustache_hash_64_2d.json  mustache_hash_64_3d.json  phtree_common_header_template.h  phtree_common_source_template.c  phtree_header_template.h  phtree_source_template.c
(+28 files in other folders)
